tests/examples/bad/cycle_inheritance.lat
int main() {
    return 1;
}

class A extends C {}
class B extends A {}
class C extends B {}